feat(notification): update notification

--- a/src/styles/antd-global.less
+++ b/src/styles/antd-global.less
@@ -16,3 +16,23 @@
 //   border-radius: 8px !important;
 // }
 
+.ant-notification-notice {
+  background: #000 !important;
+  border-radius: 12px !important;
+}
+
+.ant-notification-notice-message {
+  font-family: 'Arial';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 16px;
+  color: #ffffff;
+}
+
+.ant-notification-notice-description {
+  font-family: 'Arial';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  color: #b4b7c1;
+}
