--- a/src/styles/antd.less
+++ b/src/styles/antd.less
@@ -2,11 +2,11 @@
 
 // cover list : https://github.com/ant-design/ant-design/blob/master/components/style/themes/default.less
 
-@primary-color: #00d092;
+@primary-color: #0DC898;
 @link-color: #0fcd8c;
 @success-color: #52c41a;
 @warning-color: #faad14;
-@error-color: #f5222d;
+@error-color: #F84752;
 @font-size-base: 14px;
 @heading-color: rgba(0, 0, 0, 0.85);
 @text-color: rgba(0, 0, 0, 0.65);
