--- a/src/components/StyledInput/index.less
+++ b/src/components/StyledInput/index.less
@@ -3,3 +3,10 @@
   font-size: 20px;
   font-family: 'Arial';
 }
+@media screen and (max-width: 768px) {
+  ::placeholder {
+    color: #b4b7c1;
+    font-size: 16px;
+    font-family: 'Arial';
+  }
+}
