--- a/src/components/ChangeLanguage/index.less
+++ b/src/components/ChangeLanguage/index.less
@@ -3,6 +3,8 @@
   margin-top: -10px;
 }
 
-.ant-popover-arrow-content::before {
+.ant-popover-arrow-content::before,
+.ant-popover-arrow {
   background: #000 !important;
+  display: none !important;
 }
