fix(ui): fix ui

--- a/src/styles/antd-global.less
+++ b/src/styles/antd-global.less
@@ -36,3 +36,8 @@
   font-size: 14px;
   color: #b4b7c1;
 }
+
+.ant-btn {
+  color: #fff !important;
+  background: linear-gradient(90.14deg, #00d092 -4.82%, #d04aff 113.33%) !important;
+}
