--- a/src/styles/font.less
+++ b/src/styles/font.less
@@ -18,6 +18,7 @@ a {
   font-style: normal;
   font-weight: normal;
   src: local('Barlow Regular'), url('../../assets/fonts/SFPRODISPLAYREGULAR.woff') format('woff');
+  font-display: swap;
 }
 
 @font-face {
@@ -25,6 +26,7 @@ a {
   font-style: normal;
   font-weight: bold;
   src: local('SBarlow Bold'), url('../../assets/fonts/SFPRODISPLAYBOLD.woff') format('woff');
+  font-display: swap;
 }
 
 @font-face {
@@ -32,6 +34,7 @@ a {
   font-style: normal;
   font-weight: normal;
   src: local('Barlow Regular'), url('../../assets/fonts/SFProText.otf') format('opentype');
+  font-display: swap;
 }
 
 @font-face {
@@ -39,4 +42,5 @@ a {
   font-style: normal;
   font-weight: normal;
   src: local('Barlow Medium'), url('../../assets/fonts/SF-Pro-Text-Medium.otf') format('opentype');
+  font-display: swap;
 }
